# Reanimate_Haskell_Funcs

./: CHANGELOG.md  LICENSE  README.md  nohup.out  reanimateHaskellFuncs.cabal
app/: Main.hs
reanimate_haskell_funcs/app/: Main.hs
reanimate_haskell_funcs/src/: Rafael_maximum.hs  Rafael_minimum.hs
reanimate_haskell_funcs/src/Common/: Utils.hs
src/: R_length.hs  R_maximum.hs  R_minimum.hs  R_product.hs  R_reverse.hs  R_reverse_hangs.hs  R_sum.hs  Rafael_reverse.hs  Rafael_reverse_hangs.hs
src/Common/: AnimUtils.hs  Assets.hs  Others.hs  Utils.hs
