name:                reanimateHaskellFuncs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:
maintainer:
copyright:
category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      reanimate >= 1.1.3.1,
                      reanimate-svg,
                      split,
                      text,
                      lens,
                      linear,
                      JuicyPixels
  exposed-modules:    R_length
                      R_reverse
                      R_reverse_hangs
                      R_sum
                      R_product
                      R_maximum
                      R_minimum
                      Common.Others
                      Common.Assets
                      Common.Utils
                      Common.AnimUtils

executable reanimateHaskellFuncs
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       reanimate >= 1.1.3.1,
                       reanimate-svg,
                       text,
                       lens,
                       linear,
                       reanimateHaskellFuncs
